--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -106,3 +106,11 @@ header {
             border-radius: 10px;
             margin-top: 10px;
         }
+
+video {
+  display: block;
+  margin: 2rem auto;
+  max-width: 100%;
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
