--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -83,6 +83,7 @@ header {
             text-align: center;
             border-radius: 10px;
             color: white;
+            cursor: not-allowed;
         }
 
         .feed {
