--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ header {
 
 
 .image-section {
-  width: 35%;
+  width: 659px;
   height: 674px;
   background:linear-gradient(90deg, #ffffff68, #fb00ea7b);
   border-radius: 30px;
