--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -11,6 +11,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-size: cover;
+      color: #333;
 
   }
 
@@ -65,7 +69,7 @@ header {
             color: #800000;
             padding: 8px 12px;
             border-radius: 20px;
-            cursor: not-allowed;
+            cursor: pointer;
         }
 
         .stories {
@@ -77,18 +81,28 @@ header {
         }
 
         .story {
-             background: linear-gradient(90deg, #f60dd79b, #b566ff97);
-            padding: 20px;
-            min-width: 100px;
-            text-align: center;
-            border-radius: 10px;
-            color: white;
-            cursor: not-allowed;
+        background: linear-gradient(90deg, #f60dd79b, #b566ff97);
+           
+      width: 100px;
+      height: 160px;
+      margin-right: 10px;
+      background-color: #ffdee9;
+      border-radius: 10px;
+      text-align: center;
+      padding: 10px;
+      color: #fff;
+      font-weight: bold;
         }
 
         .feed {
-            padding: 10px;
-        }
+      max-width: 1080px;
+      margin: 30px auto;
+      
+      border-radius: 10px;
+   
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+        
 
         .post {
              background: linear-gradient(90deg, #f60dd79b, #b566ff97);
@@ -108,11 +122,40 @@ header {
             margin-top: 10px;
         }
 
-video {
-  display: block;
-  margin: 2rem auto;
-  max-width: 100%;
-  border-radius: 15px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-}
+        .post-buttons {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 10px;
+    }
 
+    .post-buttons button {
+      background-color: #9d00ff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 20px;
+      color: white;
+      cursor: pointer;
+    
+    }
+
+    .post-buttons button:hover {
+      background-color: #ff7cae;
+    }
+        
+     .post img {
+      width: 100%;
+      border-radius: 10px;
+    }
+  .container {
+      max-width: 1080px;
+      margin: 30px auto;
+      background: linear-gradient(90deg, #f60dd79b, #b566ff97);
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .story-section {
+      display: flex;
+      overflow-x: auto;
+      margin-bottom: 20px;
+    }
