--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -99,6 +99,7 @@ header {
       margin: 30px auto;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      color: white;
     }
 .feed p{
 color: white;
