--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -44,9 +44,9 @@ header {
             cursor: pointer;
             color: white;
         }
-li a{
-colo: white;
-}
+    a {
+    color: white;
+    }
 
         .status {
             background: linear-gradient(90deg, #f60dd79b, #b566ff97);
