--- a/HOME FEED.css
+++ b/HOME FEED.css
@@ -25,6 +25,9 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            top: 0;
+            z-index: 1000;
+            background-color: #6e0080;
         }
 
         header h1 {
@@ -53,6 +56,9 @@ header {
             padding: 10px;
             margin: 10px;
             border-radius: 10px;
+            top: 70px;
+            z-index: 999; 
+            background-color: #6e0080; 
         }
 
         .status input {
